# llvm-tutor

./: CMakeLists.txt  Dockerfile_archlinux  Dockerfile_fedora  Dockerfile_ubuntu
.github/workflows/: docker-archlinux.yml  docker-fedora.yml  docker-ubuntu.yml  x86-darwin-llvm-from-sources.yml  x86-darwin.yml  x86-ubuntu-llvm-from-sources-static.yml  x86-ubuntu-llvm-from-sources.yml  x86-ubuntu.yml  x86-windows-llvm-from-sources.yml
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
cmake/: fix_llvm_compilation_settings.cmake
lib/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/llvm/: dce.ll
test/passes/: ConvertFCmpEqPreds.ll  ConvertFCmpEq_exec.ll  DuplicateBB.ll  DuplicateBB_MergeBB_exec.ll  DuplicateBB_add.ll  DuplicateBB_exec.ll  DuplicateBB_float.ll  DuplicateBB_global.ll  DuplicateBB_switch.ll  DynamicCallCounterTest1.ll  DynamicCallCounterTest2.ll  DynamicCallCounterTest3.ll  FindFCmpEq_float.ll  FindFCmpEq_float_compare.ll  FindFCmpEq_float_non_compare.ll  FindFCmpEq_int_compare.ll  MBA_add_32bit.ll  MBA_add_8bit.ll  MBA_add_exec.ll  MBA_add_ratio.ll  MBA_add_ratio2.ll  MBA_sub.ll  MBA_sub_exec.ll  MergeBB_conditional_branch_merged.ll  MergeBB_conditional_branch_not_merged.ll  MergeBB_exec.ll  MergeBB_no_merge.ll  MergeBB_switch_merged.ll  MergeBB_switch_not_merged.ll  OpcodeCounter.ll  OpcodeCounter_OptimisationPipeline.ll  StaticCallCounter_Basic.ll  StaticCallCounter_Loop.ll  StaticCallCounter_NestedCalls.ll  StaticCallCounter_Ptr.ll  auto_registration_legacy_pm.ll  auto_registration_new_pm.ll  hello.ll  inject_func_call.ll  inject_func_call_exec.ll  (+4 more)
test/tools/: static-test1.ll
tools/: CMakeLists.txt
utils/: static_registration.sh
